# actix-api-practice

./: .env  Cargo.toml  Makefile  README.md  diesel.toml  k6-bench.js
src/: lib.rs  main.rs  posts.rs  routes.rs
