[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = "0.4.38"
color-eyre = "0.6.3"
diesel = { version = "2.2.2", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.206", features = ["derive"] }
